tests/lean/1079.lean.expected.out
1079.lean:3:2-3:7: error: Alternative 'isFalse' has not been provided
[Meta.Tactic.simp.rewrite] h:1000:
      m
    ==>
      n
[Meta.Tactic.simp.rewrite] eq_self:1000:
      n = n
    ==>
      True
[Meta.Tactic.simp.rewrite] imp_self:10000:
      False → False
    ==>
      True
